testsuite/tests/dependent/should_fail/T15743d.stderr

T15743d.hs:10:1: error:
    • These kind and type variables: k
                                     (c :: k)
                                     (a :: Proxy c)
                                     (b :: Proxy d)
                                     (x :: SimilarKind a b)
      are out of dependency order. Perhaps try this ordering:
        k
        (d :: k)
        (c :: k)
        (a :: Proxy c)
        (b :: Proxy d)
        (x :: SimilarKind a b)
      NB: Implicitly declared variables come before others.
    • In the data type declaration for ‘T2’
